Fixed various layout issues; renamed some elements of the interface.

--- a/app.css
+++ b/app.css
@@ -5,9 +5,10 @@
 }
 
 :root {
-    --card-width: 8vw;
+    --card-width: 80px;
     --card-factor: 1.4;
-    --theater-width: 16vw;
+    --card-offset: 3rem;
+    --theater-width: 160px;
     --theater-factor: 0.7;
 }
 
@@ -15,12 +16,57 @@ body {
     background-color: #EFEFEF;
 }
 
-#wrapper {
+#container {
     display: flex;
     flex-direction: column;
-    padding: 1rem 3rem;
+    align-items: center;
+    padding: 2rem 0;
     height: 100vh;
     font-family: sans-serif;
+}
+
+/* Main Area */
+
+#main-area {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 800px;
+}
+
+.depot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+}
+
+.theater-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.column {
+    justify-content: flex-start;
+    height: 100%;
+}
+
+#theaters {
+    display: flex;
+}
+
+.discarded {
+    top: calc(var(--card-width) / 2 * var(--card-factor));
+    margin-top: calc(var(--card-width) * var(--card-factor) * -1);
+}
+
+/* Players */
+
+#player-one, #player-two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #player-one-name {
@@ -31,35 +77,15 @@ body {
     margin-bottom: 1rem;
 }
 
-#main-area {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-}
-
-#theaters {
-    display: flex;
-}
-
-#discarded-cards {
-    position: relative;
-}
-
-#player-one, #player-two {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .hand {
     display: flex;
     flex-direction: row;
+    height: calc(var(--card-width) * var(--card-factor));
 }
 
 #player-one .hand {
     margin-top: 2rem;
-    margin-left: 3rem;
+    margin-left: var(--card-offset);
 }
 
 #player-two .hand {
@@ -86,20 +112,27 @@ body {
     width: var(--theater-width);
     height: calc(var(--theater-width) * var(--theater-factor));
     border-radius: 0.5rem;
-    margin: 1rem 0;
     padding: 0.5rem;
     color: #EFEFEF;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4);
     user-select: none;
 }
 
-#player-one-cards, #player-two-cards {
+#player-one-column, #player-two-column {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#player-one-cards .card:not(:first-of-type), #player-two-cards .card:not(:first-of-type) {
+#player-one-column {
+    margin-top: -2rem;
+}
+
+#player-two-column {
+    margin-top: -2rem;
+}
+
+#player-one-column .card:not(:first-of-type), #player-two-column .card:not(:first-of-type) {
     margin-top: -5rem;
 }
 
@@ -115,12 +148,7 @@ body {
 }
 
 .hand .card {
-    margin-left: -2.5rem;
-}
-
-.discarded {
-    top: calc(var(--card-width) / 2 * var(--card-factor));
-    margin-top: calc(var(--card-width) * var(--card-factor) * -1);
+    margin-left: calc(var(--card-offset) * -1);
 }
 
 .selected {
